--- a/chatbot.html
+++ b/chatbot.html
@@ -16,6 +16,7 @@
     <script src="https://unpkg.com/supersimpledev/babel.js"></script>
     <script type="text/babel">
     
+      //comment
     function ChatInput() {
       return (
         <>
