--- a/chatbot.html
+++ b/chatbot.html
@@ -35,12 +35,16 @@
           id: crypto.randomUUID()
         }
       ]);
+
+        setInputText('');
+
       }
 
       return (
         <>
           <input placeholder="Send a message to Chatbot" size="30"
-          onChange={saveInputText} 
+          onChange={saveInputText}
+          value = {inputText} 
           />
           <button
           onClick={sendMessage}>Send</button>
@@ -100,7 +104,7 @@
       const [chatMessages, setChatMessages] = React.useState(
 [{
         message: 'hello chatbot',
-        sender: '.user',
+        sender: 'user',
         id: 'id1'
       },{
         message: 'hello, how can I help you?',
