New chatMessages with Response

--- a/chatbot.html
+++ b/chatbot.html
@@ -6,12 +6,11 @@
   <body>
     <div class="js-container"></div>
 
-    <script src="https://unpkg.com/supersimpledev@8.6.4/external-library.js">
-
-    </script>
-
     <script src="https://unpkg.com/supersimpledev/react.js"></script>
     <script src="https://unpkg.com/supersimpledev/react-dom.js"></script>
+    
+    <script src="https://unpkg.com/supersimpledev/chatbot.js"></script>
+
 
 
     <script src="https://unpkg.com/supersimpledev/babel.js"></script>
@@ -27,11 +26,24 @@
       }
 
       function sendMessage () {
-         setChatMessages([
+        const newChatMessages = [
           ...chatMessages,
         {
           message: inputText,
           sender: 'user',
+          id: crypto.randomUUID()
+        }
+      ]
+
+         setChatMessages(newChatMessages);
+
+      const response= Chatbot.getResponse(inputText);
+
+         setChatMessages([
+          ...newChatMessages,
+        {
+          message: response,
+          sender: 'robot',
           id: crypto.randomUUID()
         }
       ]);
