--- a/chatbot.html
+++ b/chatbot.html
@@ -3,6 +3,12 @@
   <head>
     <title>chatbot</title>
     <style>
+
+body {
+        font-family: Arial
+        
+      }
+
       .send-button {
         background-color: rgb(25, 135 ,84);
         color: white;
@@ -50,7 +56,7 @@
         border-radius: 10px;
         max-width: 70%;
         margin: 5px;
-        font-family: Arial, Helvetica, sans-serif;
+        
       }
 
     </style>
