--- a/chatbot.html
+++ b/chatbot.html
@@ -239,23 +239,11 @@ body {
 
       const [chatMessages, setChatMessages] = React.useState(
 [{
-        message: 'hello chatbot',
-        sender: 'user',
-        id: 'id1'
-      },{
-        message: 'hello, how can I help you?',
+        message: 'Hello, how can I help you?',
         sender: 'robot',
          id: 'id2'
       }
-      ,{
-        message: 'can you get me todays date?',
-        sender: 'user',
-         id: 'id3'
-      },{
-        message: 'today is July 24',
-        sender: 'robot',
-         id: 'id4'
-      }]
+      ]
 );
 const [isLoading, setIsLoading] = React.useState(false);
   //const [chatMessages, setChatMessages] = array; 
